Separei entre 2 DTos um de resposta outro de criação no POST, o de criação não apresenta id em sua estrutura, pois ele é criado automaticamente, já o de resposta (GET) apresenta ao usuario do sistema seu ID, adicionei pra converter esses dtos em entity e vice versa o Mapper que ja faz automaticamente.